<resources>
    <string name="app_name">Covid Daily</string>
    <string name="settings">Settings</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>


    <!-- Location Preferences -->
    <string name="key_country">country</string>
    <string name="label_country">Country</string>
    <string name="summary_country">Select a country</string>
    <string name="label_location">Location</string>

    <!-- Notification Preferences -->
    <string name="title_notifications">Notifications</string>
    <string name="label_notifications">Enable Notifications</string>
    <string name="summary_enableNotifications">Notifications Enabled</string>
    <string name="summary_disableNotifications">Notifications Disabled</string>
    <string name="key_notifications">notifications</string>
    <string name="title_settingsActivity">Settings</string>
    <string name="notificationMsg_covidAlert">In a crowded place? Don\'t forget to put on your face mask!</string>
    <string name="title_detailActivity">Details</string>
    <string name="label_newConfirmedCases">New Confirmed Cases</string>
    <string name="label_totalConfirmedCases">Total Confirmed Cases</string>
    <string name="label_newDeaths">New Deaths</string>
    <string name="label_totalDeaths">Total Deaths</string>
    <string name="label_totalActiveCases">Total Active Cases</string>
    <string name="contentDesc_fabShare">Press to Share the details of this Covid Record</string>
    <string name="label_date">Date</string>
    <string name="title_shareIntent">Share Daily Covid Report</string>
    <string name="no_internet_connection">No Internet Connection :( Try again later.</string>
    <string name="contentDesc_newDeaths">An image representing deaths caused by Covid.</string>
    <string name="contentDesc_newConfirmed">An image of positive covid cases</string>
    <string name="contentDesc_totalConfirmed">An image representing statistics, referring to the total number of confirmed covid cases</string>
    <string name="contentDesc_totalActive">An image of hospitalized person representing total number of active Covid cases</string>
    <string name="contentDesc_totalDeaths">An image representing the total deaths caused by Covid.</string>
    <string name="label_confirmed_cases">Confirmed Cases</string>
    <string name="label_deaths">Deaths</string>
</resources>